--- a/frontend/PagesHtml/Faq.html
+++ b/frontend/PagesHtml/Faq.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pages - about us</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pages - FAQ</title>
 </head>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link href="../../home.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<link href="../Style/home.css" rel="stylesheet">
+<link href="../Style/Pages/Faq.css" rel="stylesheet">
+
 <body>
-    
-    <!-- navbar -->
+
+  <!-- navbar -->
   <nav class="navbar navbar-expand-xl " style="background-color: #F6F2EB;">
 
     <div class="container-fluid padding-section ">
@@ -18,7 +22,7 @@
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a href="#"><img src="../../image/home-page/footer/nav-logo.png" class="w-75"></a>
+        <a href="#"><img src="../Asserts/image/home-page/footer/nav-logo.png" class="w-75"></a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -36,7 +40,7 @@
             <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="#">DONATION</a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center d-none d-xl-block">
-            <a href="#"><img src="../../image/home-page/footer/nav-logo.png" ></a>
+            <a href="#"><img src="../Asserts/image/home-page/footer/nav-logo.png"></a>
           </li>
 
           <li class="nav-item d-flex justify-content-center align-items-center">
@@ -48,11 +52,11 @@
 
           <li class="nav-item d-flex justify-content-center align-items-center">
             <a class="nav-link  active me-4 " aria-current="page" href="#"><img
-                src="../../image/home-page/footer/search.png"></a>
+                src="../Asserts/image/home-page/footer/search.png"></a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center">
             <a class="nav-link  active me-4" aria-current="page" href="#"><img
-                src="../../image/home-page/footer/bag.png"></a>
+                src="../Asserts/image/home-page/footer/bag.png"></a>
           </li>
         </ul>
       </div>
@@ -60,30 +64,33 @@
 
   </nav>
 
-  <section class="padding-section container row mx-auto justify-content-around my-5">
 
-    <img src="../../image/pages/about-us/house.png" alt="bible" class="col-lg-5 d-none d-lg-block">
-
-    <div class="col-lg-6 col-12 faithful-hearts">
-      <h2 class="heading-text w-100 ps-3">About us</h2>
-      <div>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, 
-
-        or randomised words which don't look even slightly believable. If you are going to use</div>
+  <!-- carousal -->
+  <section class="padding-section mx-auto container mt-5 position-relative">
+    <div class="carousel-container px-lg-5">
     </div>
-    
-
+<div class="carousal-btn d-flex flex-md-column flex-row justify-content-center align-items-center gap-1 mx-auto my-3 ">
+  <button class="prev-btn all-buttons px-1 py-3 rounded-0 prev-btn"><img src="../Asserts/image/pages/faq/left-arrow.svg" ></button>
+  <button class="prev-btn all-buttons px-1 py-3 rounded-0 next-btn"><img src="../Asserts/image/pages/faq/right-arrow.svg" ></button>
+</div>
   </section>
+  
 
 
   
+  
 
+
+
+  
   <!-- footer -->
   <section class="container-fluid padding-section footer-sec bg-black mt-5">
 
     <div class="padding-section container mx-auto">
       <div class="row p-3 justify-content-between align-items-center">
-        <div class="col-lg-2"><img src="../../image/home-page/footer/footer-logo.png"></div>
-        <p class="col-lg-5 col-12 content-family my-3">A long established fact that a reader will be distracted by the
+        <div class="col-lg-2"><img src="../Asserts/image/home-page/footer/footer-logo.png"></div>
+        <p class="col-lg-5 col-12 content-family my-3">A long established fact
+          that a reader will be distracted by the
           readable content of a page when looking.</p>
       </div>
     </div>
@@ -134,18 +141,18 @@
         </table>
       </div>
 
-
       <div
         class="col-md-5 mt-4 col-12 d-flex flex-column justify-content-center  text-start  px-lg-5 px-3 py-3 align-items-start ">
-        <h2 class="heading-family text-white fs-4">Subscribe to our newsletter</h2>
-        <p class="content-family my-2">A long established fact that a reader will be distracted by the readable.A long.
+        <h2 class="heading-family text-white fs-4">Subscribe to our
+          newsletter</h2>
+        <p class="content-family my-2">A long established fact that a reader
+          will be distracted by the readable.A long.
         </p>
         <input type="email" placeholder="Enter your email here" class="p-2 w-75  border-0 rounded-1 my-2"
           style="background-color: #323233;">
         <button class="all-buttons border-0 bg-danger text-light px-3 py- my-2">SUBSCRIBE</button>
 
       </div>
-
 
     </div>
     <hr class="footer-hr">
@@ -163,6 +170,8 @@
     </div>
   </section>
 
-
+  <script src="../Javascript/Faq.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
+
 </html>
