--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link href="./STYLE/home.css" rel="stylesheet">
+<link href="./Style/home.css" rel="stylesheet">
 
 <body>
 
@@ -21,7 +21,7 @@
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a href="#"><img src="./image/home-page/footer/nav-logo.png" class="w-75"></a>
+        <a href="#"><img src="./Asserts/image/home-page/footer/nav-logo.png" class="w-75"></a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -39,7 +39,7 @@
             <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="#">DONATION</a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center d-none d-xl-block">
-            <a class="navbar-brand" href="#"><img src="./image/home-page/footer/nav-logo.png"></a>
+            <a class="navbar-brand" href="#"><img src="./Asserts/image/home-page/footer/nav-logo.png"></a>
           </li>
 
           <li class="nav-item d-flex justify-content-center align-items-center">
@@ -51,11 +51,11 @@
 
           <li class="nav-item d-flex justify-content-center align-items-center">
             <a class="nav-link  active me-4 " aria-current="page" href="#"><img
-                src="./image/home-page/footer/search.png"></a>
+                src="./Asserts/image/home-page/footer/search.png"></a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center">
             <a class="nav-link  active me-4" aria-current="page" href="#"><img
-                src="./image/home-page/footer/bag.png"></a>
+                src="./Asserts/image/home-page/footer/bag.png"></a>
           </li>
         </ul>
       </div>
@@ -70,14 +70,14 @@
       <div class="d-flex flex-column col-xl-3 col-6 gap-3">
         <div class="border border-1 d-flex flex-column  py-5 px-2 align-items-center "
           style="border-radius:50% 50% 0 0;">
-          <img src="./image/home-page/hero-section/lady.png" style="width: 40%;">
+          <img src="./Asserts/image/home-page/hero-section/lady.png" style="width: 40%;">
           <h2 class="heading-family fs-6 my-2">Energise your life</h2>
           <p class=" content-family text-center " style="font-size: 10px ;">Long established fact that a reader </p>
 
         </div>
         <div class="border border-1 d-flex flex-column  py-5 px-2 align-items-center "
           style="border-radius:48% ;height: 30rem;">
-          <img src="./image/home-page/hero-section/hydrangea.png" style="width: 40%;">
+          <img src="./Asserts/image/home-page/hero-section/hydrangea.png" style="width: 40%;">
           <div class="d-flex gap-2 justify-content-center align-items-center ">
             <h2 class="heading-family fs-6 my-2 text-center ">Faith in Action,<br> Love in Motion</h2>
             <button class="all-buttons rounded-circle p-3 h-75">?</button>
@@ -87,7 +87,7 @@
 
       <div class="col-xl-5  d-xl-flex d-none position-relative bottom-0"
         style="border-radius: 50% 50% 0 0; background-color: #c8cad0;">
-        <img src="./image/home-page/hero-section/jesus.png" style="object-position: center; width: 120%; height: 100%;"
+        <img src="./Asserts/image/home-page/hero-section/jesus.png" style="object-position: center; width: 120%; height: 100%;"
           class="object-fit-cover overflow-visible  start-50 bottom-0  translate-middle-x   justify-content-center position-absolute  ">
       </div>
 
@@ -96,7 +96,7 @@
       <div class="d-flex flex-column col-xl-3 col-6 gap-3  ">
         <div class="border border-1 d-flex flex-column pt-5 pt-sm-0 align-items-center "
           style="border-radius:50% 50% 0 0;">
-          <img src="./image/home-page/hero-section/crown-lady.png" class="w-75 pt-sm-0" >
+          <img src="./Asserts/image/home-page/hero-section/crown-lady.png" class="w-75 pt-sm-0" >
 
         </div>
 
@@ -122,7 +122,7 @@
           </div>
 
         </div>
-         <img src="./image/home-page/hero-section/donate.png" class="position-absolute start-50 translate-middle-x d-none  d-lg-block " style="top:-65%">
+         <img src="./Asserts/image/home-page/hero-section/donate.png" class="position-absolute start-50 translate-middle-x d-none  d-lg-block " style="top:-65%">
 
       </div>
     </div> 
@@ -131,8 +131,8 @@
   <!--the-lord -->
   <section class="padding-section container the-lord-main my-5">
     <div class="row mt-5 mx-auto align-items-start justify-content-center the-lord-section">
-      <img src="./image/home-page/the-lord/building.png" class="col-lg-3 col-6  the-lord-img " alt="building">
-      <img src="./image/home-page/the-lord/lady.png" class="col-lg-3 col-6 the-lord-img " alt="lady">
+      <img src="./Asserts/image/home-page/the-lord/building.png" class="col-lg-3 col-6  the-lord-img " alt="building">
+      <img src="./Asserts/image/home-page/the-lord/lady.png" class="col-lg-3 col-6 the-lord-img " alt="lady">
       <div class="col-lg-5 ms-lg-5 ms-0 mt-3 mt-lg-0">
         <h2 class="heading-text ps-3 w-75">We Call Price The Lord</h2>
         <p class="content-family my-lg-5 my-4">A long established fact that a reader will be distracted by the readable
@@ -142,7 +142,7 @@
           <div class="card mb-3 col-12 border-0" style="max-width: 540px ">
             <div class="row g-0">
               <div class="col-md-3 w-25">
-                <img src="./image/home-page/the-lord/church.png" class="img-fluid rounded-start " alt="chruch">
+                <img src="./Asserts/image/home-page/the-lord/church.png" class="img-fluid rounded-start " alt="chruch">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -157,7 +157,7 @@
           <div class="card mb-3 col-12 border-0 " style="max-width: 540px;">
             <div class="row g-0">
               <div class="col-md-3 w-25">
-                <img src="./image/home-page/the-lord/church.png" class="img-fluid rounded-start" alt="chruch">
+                <img src="./Asserts/image/home-page/the-lord/church.png" class="img-fluid rounded-start" alt="chruch">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -176,7 +176,7 @@
 
     <div
       class="customer-review row justify-content-center align-items-center py-md-3 py-5 px-lg-5 px-3 mt-lg-2 rounded-2 mx-2">
-      <img src="./image/home-page/the-lord/customers.png"
+      <img src="./Asserts/image/home-page/the-lord/customers.png"
         class="col-lg-3 col-12 p-lg-5 px-3 pb-3 ps-lg-0 client-review-img  ">
       <h2
         class="col-lg-7 col-12 heading-family fs-3 px-lg-5 -0 py-lg-3 p-2 customer-review-heading text-center text-lg-start">
@@ -192,19 +192,19 @@
       <h2 class="heading-text w-100 p-3 my-4">Faithful hearts, compassionate hands</h2>
       <p class="content-family my-4">A long established fact that a reader will be distracted by the readable content of
         a page when looking.</p>
-      <img src="./image/home-page/faithful-hearts/quote-button.png" class="my-4" alt="button">
+      <img src="./Asserts/image/home-page/faithful-hearts/quote-button.png" class="my-4" alt="button">
       <p class="content-family my-4 faithful-hearts-quote"></p>
-      <div><img src="./image/home-page/faithful-hearts/colen.png" alt="colen" class="me-2 my-5"><span
+      <div><img src="./Asserts/image/home-page/faithful-hearts/colen.png" alt="colen" class="me-2 my-5"><span
           class="fs-4 heading-family fw-semibold faithful-hearts-author"></span></div>
     </div>
-    <img src="./image/home-page/faithful-hearts/bible-book.png" alt="bible" class="col-lg-5 d-none d-lg-block">
+    <img src="./Asserts/image/home-page/faithful-hearts/bible-book.png" alt="bible" class="col-lg-5 d-none d-lg-block">
 
   </section>
 
   <!-- potential-about -->
   <Section class="padding-section container mx-auto row justify-content-around ">
     <div class="col-md-5 my-md-5 my-3 order-md-1 order-2 potential-about-blog p-5 p-md-0">
-      <img src="./image/home-page/potential-about/fort.png" alt="fort" class="w-100 d-none d-md-block">
+      <img src="./Asserts/image/home-page/potential-about/fort.png" alt="fort" class="w-100 d-none d-md-block">
       <p class="my-5 content-family">“I love you when you bow in your mosque, kneel in your temple, pray in your church.
         For you and I are sons of one religion, and it is the spirit”“I love you when you bow in your mosque, kneel in
         your temple. mosque, kneel in your
@@ -216,7 +216,7 @@
       <p class="content-family my-5">A long established fact that a reader will be distracted by the readable content of
         a page when looking.A long established fact that a reader will be distracted by the readable content of a page
         when looking.</p>
-      <img src="./image/home-page/potential-about/drink.png" alt="drink" class="w-100">
+      <img src="./Asserts/image/home-page/potential-about/drink.png" alt="drink" class="w-100">
     </div>
   </Section>
 
@@ -231,7 +231,7 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-xl-4 g-4 mt-md-5 mt-2">
       <div class="col ">
         <div class="card pt-4 px-2 satisfaction-cards border-0">
-          <img src="./image/home-page/satisfaction-mission/bell.png" class="card-img-center mx-auto w-25" alt="cross">
+          <img src="./Asserts/image/home-page/satisfaction-mission/bell.png" class="card-img-center mx-auto w-25" alt="cross">
           <div class="card-body text-center satisfaction-cards-body">
             <h5 class="card-title heading-family fs-5 mt-2 fw-semibold">Our Churches</h5>
             <p class="card-text d-none d-md-block content-family">A long established fact that a readr.</p>
@@ -242,7 +242,7 @@
       </div>
       <div class="col ">
         <div class="card pt-4 px-2 satisfaction-cards border-0">
-          <img src="./image/home-page/satisfaction-mission/bell.png" class="card-img-center mx-auto w-25"
+          <img src="./Asserts/image/home-page/satisfaction-mission/bell.png" class="card-img-center mx-auto w-25"
             alt="cross">
           <div class="card-body text-center satisfaction-cards-body">
             <h5 class="card-title heading-family fs-5 mt-2 fw-semibold">Our Churches</h5>
@@ -254,7 +254,7 @@
       </div>
       <div class="col ">
         <div class="card pt-4 px-2 satisfaction-cards border-0">
-          <img src="./image/home-page/satisfaction-mission/bell.png" class="card-img-center mx-auto w-25"
+          <img src="./Asserts/image/home-page/satisfaction-mission/bell.png" class="card-img-center mx-auto w-25"
             alt="cross">
           <div class="card-body text-center satisfaction-cards-body">
             <h5 class="card-title heading-family fs-5 mt-2 fw-semibold">Our Churches</h5>
@@ -266,7 +266,7 @@
       </div>
       <div class="col ">
         <div class="card pt-4 px-2 satisfaction-cards border-0">
-          <img src="./image/home-page/satisfaction-mission/bell.png" class="card-img-center mx-auto w-25" alt="cross">
+          <img src="./Asserts/image/home-page/satisfaction-mission/bell.png" class="card-img-center mx-auto w-25" alt="cross">
           <div class="card-body text-center satisfaction-cards-body">
             <h5 class="card-title heading-family fs-5 mt-2 fw-semibold">Our Churches</h5>
             <p class="card-text d-none d-md-block content-family">A long established fact that a readr.</p>
@@ -287,24 +287,24 @@
       <h2 class="heading-text p-3">Growing Stronger in God’s our work</h2>
       <p class="content-family my-5">A long established fact that a reader will be distracted by the readable content of
         a page when looking.A long established fact that a reader will be distracted by the readable.</p>
-      <div class="content-family mb-3 mt-4"><img src="./image/home-page/growing-stronger/check.png" class="me-4">Divide
+      <div class="content-family mb-3 mt-4"><img src="./Asserts/image/home-page/growing-stronger/check.png" class="me-4">Divide
         the group into smaller teams.</div>
-      <div class="content-family my-3"><img src="./image/home-page/growing-stronger/check.png" class="me-4">Give each
+      <div class="content-family my-3"><img src="./Asserts/image/home-page/growing-stronger/check.png" class="me-4">Give each
         team a Bible verse or story.</div>
-      <div class="content-family my-3"><img src="./image/home-page/growing-stronger/check.png" class="me-4">Ask each
+      <div class="content-family my-3"><img src="./Asserts/image/home-page/growing-stronger/check.png" class="me-4">Ask each
         team to act out the Bible verse or story.</div>
 
       <button class="all-buttons mt-5">LEARN MORE</button>
     </div>
-    <img src="./image/home-page/growing-stronger/hand-cross.png"
+    <img src="./Asserts/image/home-page/growing-stronger/hand-cross.png"
       class="col-xl-3 pt-5 px-4 d-xl-block d-none object-fit-contain mt-auto ">
-    <img src="./image/home-page/growing-stronger/girl-praying.png" class="col-lg-4 col-xl-3 d-none d-lg-block mt-5">
+    <img src="./Asserts/image/home-page/growing-stronger/girl-praying.png" class="col-lg-4 col-xl-3 d-none d-lg-block mt-5">
 
   </section>
 
   <!-- your members -->
   <section class="padding-section container mx-auto  ">
-    <div class="d-flex justify-content-center "><img src="./image/home-page/your-members/crown.png"
+    <div class="d-flex justify-content-center "><img src="./Asserts/image/home-page/your-members/crown.png"
         class="d-lg-block d-none "></div>
     <div class="row p-3 justify-content-between align-items-center">
       <h2 class="col-lg-4 col-12 w-50  heading-text satisfaction-text  ">Feel god closer to your members</h2>
@@ -321,7 +321,7 @@
     </div>
 
 
-    <div class="d-flex justify-content-center  "><img src="./image/home-page/your-members/crown-footer.png"
+    <div class="d-flex justify-content-center  "><img src="./Asserts/image/home-page/your-members/crown-footer.png"
         class="d-lg-block d-none "></div>
   </section>
 
@@ -360,7 +360,7 @@
 
       <div class="row justify-content-between p-3 ">
         <div class="col-lg-7 col-12 overflow-hidden mt-3">
-          <img src="./image/home-page/articles/bench.png" class="h-100 w-100 object-fit-cover rounded-2">
+          <img src="./Asserts/image/home-page/articles/bench.png" class="h-100 w-100 object-fit-cover rounded-2">
         </div>
         <div
           class="col-lg-4 col-12 d-flex flex-column justify-content-around border-1 border rounded-1 mt-3 text-center  px-lg-5 px-3 py-3 gap-2 align-items-start ">
@@ -394,7 +394,7 @@
 
     <div class="padding-section container mx-auto">
       <div class="row p-3 justify-content-between align-items-center">
-        <div class="col-lg-2"><img src="./image/home-page/footer/footer-logo.png"></div>
+        <div class="col-lg-2"><img src="./Asserts/image/home-page/footer/footer-logo.png"></div>
         <p class="col-lg-5 col-12 content-family my-3">A long established fact that a reader will be distracted by the
           readable content of a page when looking.</p>
       </div>
@@ -476,8 +476,8 @@
   </section>
 
 
-  <script src="https://smtpjs.com/v3/smtp.js"></script>
-  <script src="./JS/home.js" type="module"></script>
+  <!-- <script src="https://smtpjs.com/v3/smtp.js"></script> -->
+  <script src="./Javascript/home.js" type="module"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
