feat:new-pages-added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,10 +27,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item d-flex justify-content-center align-items-center">
-            <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="#">HOME</a>
+            <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="./index.html">HOME</a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center">
-            <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="./pages/AboutUs/aboutUs.html">PAGE</a>
+            <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="./PagesHtml/AboutUs.html">PAGE</a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center">
             <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="#">BLOG</a>
