--- a/frontend/PagesHtml/AboutUs.html
+++ b/frontend/PagesHtml/AboutUs.html
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item d-flex justify-content-center align-items-center">
-            <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="#">HOME</a>
+            <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="../index.html">HOME</a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center">
             <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="#">PAGE</a>
@@ -89,17 +89,17 @@
     </div>
 
     <div class="stats-church row mt-5 rounded-2 align-items-center justify-content-center p-3">
-      <div class="col-6 col-md-3 text-center"><h2 class="fw-bold fs-1 heading-family">300+</h2><P class="content-family">New volunteer</P></div>
-      <div class="col-md-3 col-6  text-center"><h2 class="fw-bold fs-1 heading-family">88+</h2><P class="content-family">New volunteer</P></div>
-      <div class="col-md-3 col-6 text-center"><h2 class="fw-bold fs-1 heading-family">$86M+</h2><P class="content-family">New volunteer</P></div>
-      <div class="col-md-3 col-6 text-center"><h2 class="fw-bold fs-1 heading-family">480+</h2><P class="content-family">New volunteer</P></div>
+      <div class="col-6 col-md-3 text-center"><h2 class="fw-bold fs-1 heading-family stats" data-stats-type="volunters" ></h2><P class="content-family">New volunteer</P></div>
+      <div class="col-md-3 col-6  text-center"><h2 class="fw-bold fs-1 heading-family stats" data-stats-type="locations" ></h2><P class="content-family">Church locations</P></div>
+      <div class="col-md-3 col-6 text-center"><h2 class="fw-bold fs-1 heading-family stats" data-stats-type="donations" ></h2><P class="content-family">Managed donations</P></div>
+      <div class="col-md-3 col-6 text-center"><h2 class="fw-bold fs-1 heading-family stats" data-stats-type="members" ></h2><P class="content-family">New member</P></div>
     </div>
 
   </section>
   
   <!-- walking -->
-  <section class="mx-auto padding-section container mt-5">
-    <div class="row  justify-content-between align-items-center">
+  <section class="mx-auto padding-section container " style="margin-top: 100px;">
+    <div class="row  justify-content-around align-items-center">
       <h2 class="col-lg-4 col-12 w-50  heading-text satisfaction-text  ">walking together,growing in faith</h2>
       <p class="col-lg-5 col-12 content-family my-3">A long established fact that a reader will be distracted by the
         readable content of a page when looking.A long established fact that.A long.</p>
@@ -107,8 +107,8 @@
     
     <div class="row row-cols-1  row-cols-md-3   mt-2 m-0">
       <div class="col ">
-        <div class="card mt-4 border-0 walking-cards">
-          <img src="../Asserts/image/pages/about-us/book-opened.png" class="card-img-center mx-auto w-25" alt="cross">
+        <div class="card m-4 border-0 walking-cards">
+          <img src="../Asserts/image/pages/about-us/book-opened.png" class="card-img-center mx-auto w-25 mt-3" alt="cross">
           <div class="card-body text-center ">
             <h5 class="card-title heading-family fs-5 mt-2 fw-semibold">Our Churches</h5>
             <p class="card-text d-none d-md-block content-family">A long established fact that a reader will be A long.</p>
@@ -117,7 +117,7 @@
       </div>
       <div class="col ">
         <div class="card mt-4 border-0 walking-cards">
-          <img src="../Asserts/image/pages/about-us/eye-opened.png" class="card-img-center mx-auto w-25"
+          <img src="../Asserts/image/pages/about-us/eye-opened.png" class="card-img-center mx-auto w-25 mt-3"
             alt="cross">
           <div class="card-body text-center ">
             <h5 class="card-title heading-family fs-5 mt-2 fw-semibold">Our Churches</h5>
@@ -127,7 +127,7 @@
       </div>
       <div class="col ">
         <div class="card mt-4 border-0 walking-cards">
-          <img src="../Asserts/image/pages/about-us/rocket.png" class="card-img-center mx-auto w-25"
+          <img src="../Asserts/image/pages/about-us/rocket.png" class="card-img-center mx-auto w-25 mt-3"
             alt="cross">
           <div class="card-body text-center ">
             <h5 class="card-title heading-family fs-5 mt-2 fw-semibold">Our Churches</h5>
@@ -147,7 +147,7 @@
     <div class="position-relative col-lg-5 col-12 mt-3 ">
       <img src="../Asserts/image/pages/about-us/girl-book.png" alt="girl" class=" w-100 h-100 p-5 p-lg-0">
       <div class="prayer-stats position-absolute heading-family fs-1 d-flex flex-column 
-      justify-content-center align-items-center text-white " >26K+<p class="content-family text-white">Happy Prayers</p></div>  
+      justify-content-center align-items-center text-white stats" data-stats-type="happyPrayers" ><p class="content-family text-white">Happy Prayers</p></div>  
     </div>
 
     <div class="col-lg-5 col-12  d-flex flex-column justify-content-around align-items-start about-church mt-5">
@@ -160,7 +160,6 @@
   
   </section>
 
-  
   <!-- footer -->
   <section class="container-fluid padding-section footer-sec bg-black mt-5">
 
@@ -248,6 +247,7 @@
     </div>
   </section>
 
+  <script type="module" src="../Javascript/Pages/AboutUs.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
