feat:new pages added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -316,7 +316,7 @@
 
     <div class="row justify-content-around gap-2 mt-3  align-items-center ">
       <hr class="col-lg-3 col-xl-4 col-1 col-sm-3">
-      <button class="all-buttons col-lg-3 col-xl-2 col-8 col-sm-4">ALL TEAM MEMBERS</button>
+      <button class="all-buttons col-lg-3 col-xl-2 col-8 col-sm-4"><a href="./PagesHtml/GalleryCarousal.html" class="text-decoration-none text-white">ALL TEAM MEMBERS</a></button>
       <hr class="col-lg-3 col-xl-4 col-1 col-sm-3">
     </div>
 
