--- a/frontend/PagesHtml/Gallery.html
+++ b/frontend/PagesHtml/Gallery.html
@@ -8,12 +8,12 @@
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link href="./Style/home.css" rel="stylesheet">
+<link href="../Style/home.css" rel="stylesheet">
 
 <body>
 
   <!-- navbar -->
-  <nav class="navbar navbar-expand-xl " style="background-color: #F6F2EB;">
+  <nav class="navbar navbar-expand-xl ">
 
     <div class="container-fluid padding-section ">
       <div class="d-flex d-xl-none justify-content-between padding-section  w-100">
@@ -21,13 +21,13 @@
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a href="#"><img src="./Asserts/image/home-page/footer/nav-logo.png" class="w-75"></a>
+        <a href="#"><img src="../Asserts/image/home-page/footer/nav-logo.png" class="w-75"></a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item d-flex justify-content-center align-items-center">
-            <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="./index.html">HOME</a>
+            <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="../index.html">HOME</a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center">
             <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="./PagesHtml/AboutUs.html">PAGE</a>
@@ -39,7 +39,7 @@
             <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="#">DONATION</a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center d-none d-xl-block">
-            <a class="navbar-brand" href="#"><img src="./Asserts/image/home-page/footer/nav-logo.png"></a>
+            <a class="navbar-brand" href="#"><img src="../Asserts/image/home-page/footer/nav-logo.png"></a>
           </li>
 
           <li class="nav-item d-flex justify-content-center align-items-center">
@@ -51,11 +51,11 @@
 
           <li class="nav-item d-flex justify-content-center align-items-center">
             <a class="nav-link  active me-4 " aria-current="page" href="#"><img
-                src="./Asserts/image/home-page/footer/search.png"></a>
+                src="../Asserts/image/home-page/footer/search.png"></a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center">
             <a class="nav-link  active me-4" aria-current="page" href="#"><img
-                src="./Asserts/image/home-page/footer/bag.png"></a>
+                src="../Asserts/image/home-page/footer/bag.png"></a>
           </li>
         </ul>
       </div>
@@ -65,8 +65,58 @@
 
   <!-- intro -->
   <section class="container  padding-section mx-auto row m-0 mt-5 justify-content-around ">
-    <img src="./Asserts/image/pages/gallery/fort-image.png" class="col-6">
-    <img src="./Asserts/image/pages/gallery/castle-img.png" class="col-6">
+    <img src="../Asserts/image/pages/gallery/fort-image.png" class="col-6">
+    <img src="../Asserts/image/pages/gallery/castle-img.png" class="col-6">
+  </section>
+
+  <!-- saviour-jesus -->
+  <section class="container padding-section mx-auto">
+    <div class="row m-0 justify-content-start  align-items-center p-3">
+      <h2 class="col-12  heading-text satisfaction-text  mt-5">Our Saviour Jesus Christ Waits Your Gallery</h2>
+      <p class=" col-12 content-family my-3 w-75 mt-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal</p>
+    </div> 
+
+    <ul class="nav nav-pills gap-lg-5 gap-0 justify-content-center" id="pills-tab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="pills-all-tab" data-bs-toggle="pill" data-bs-target="#pills-all" type="button" role="tab" aria-controls="pills-all" aria-selected="true">All</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="pills-church-tab" data-bs-toggle="pill" data-bs-target="#pills-church" type="button" role="tab" aria-controls="pills-church" aria-selected="false">Church</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="pills-donation-tab" data-bs-toggle="pill" data-bs-target="#pills-donation" type="button" role="tab" aria-controls="pills-donation" aria-selected="false">Donation</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="pills-charity-tab" data-bs-toggle="pill" data-bs-target="#pills-charity" type="button" role="tab" aria-controls="pills-charity" aria-selected="false">Charity</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="pills-education-tab" data-bs-toggle="pill" data-bs-target="#pills-education" type="button" role="tab" aria-controls="pills-education" aria-selected="false">Education</button>
+      </li>
+    </ul>
+    <hr class="m-0">
+
+    <div class="tab-content p-5" id="pills-tabContent">
+      <div class="tab-pane fade show active" id="pills-all" role="tabpanel" aria-labelledby="pills-all-tab">
+        <div class=" row justify-content-start" id="all-tab">
+        </div>
+      </div>
+      <div class="tab-pane fade" id="pills-church" role="tabpanel" aria-labelledby="pills-church-tab">
+        <div class="church-tab row justify-content-start">
+        </div>
+      </div>
+      <div class="tab-pane fade" id="pills-donation" role="tabpanel" aria-labelledby="pills-donation-tab">
+        <div class="donation-tab row justify-content-start">
+        </div>
+      </div>
+      <div class="tab-pane fade" id="pills-charity" role="tabpanel" aria-labelledby="pills-charity-tab">
+        <div class="charity-tab row justify-content-start">
+        </div>
+      </div>
+      <div class="tab-pane fade" id="pills-education" role="tabpanel" aria-labelledby="pills-education-tab">
+        <div class="education-tab row justify-content-start">
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- footer -->
@@ -74,7 +124,7 @@
 
     <div class="padding-section container mx-auto">
       <div class="row p-3 justify-content-between align-items-center">
-        <div class="col-lg-2"><img src="./Asserts/image/home-page/footer/footer-logo.png"></div>
+        <div class="col-lg-2"><img src="../Asserts/image/home-page/footer/footer-logo.png"></div>
         <p class="col-lg-5 col-12 content-family my-3">A long established fact that a reader will be distracted by the
           readable content of a page when looking.</p>
       </div>
@@ -157,7 +207,7 @@
 
 
   
-  <script src="./Javascript/home.js" type="module"></script>
+  <script src="../Javascript/Pages/Gallery.js" type="module"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
