--- a/frontend/PagesHtml/GalleryCarousal.html
+++ b/frontend/PagesHtml/GalleryCarousal.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pages - about us</title>
+  <title>Pages-Gallery</title>
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link href="../Style/Pages/AboutUs.css" rel="stylesheet">
 <link href="../Style/home.css" rel="stylesheet">
+<link href="../Style/Pages/Faq.css" rel="stylesheet">
 
 <body>
 
@@ -31,7 +31,7 @@
             <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="../index.html">HOME</a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center">
-            <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="#">PAGE</a>
+            <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="./AboutUs.html">PAGE</a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center">
             <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="#">BLOG</a>
@@ -64,101 +64,40 @@
 
   </nav>
 
-  <!-- hero-section -->
-  <section class="padding-section container row mx-auto justify-content-around my-5">
-    <img src="../Asserts/image/pages/about-us/house.png" alt="bible" class="col-lg-6 col-12 mt-3">
-    <div class="col-lg-5 col-12 mt-3 d-flex flex-column justify-content-around align-items-start">
-      <h2 class="heading-text w-100 ps-3">About us</h2>
-      <div class="content-family my-3 my-md-5">There are many variations of
-        passages of Lorem Ipsum available, but the
-        majority have suffered alteration in some form, by injected humour,
-        <br><br>
-        or randomised words which don't look even slightly believable. If you
-        are going to use
+  <!-- carousal -->
+  <section class="padding-section mx-auto container">
+    <div class="row m-0 justify-content-start  align-items-center p-3">
+        <h2 class="col-12  heading-text w-75  mt-5">Your Guide to Understanding Our Church</h2>
+        <p class=" col-12 content-family my-3 w-75 my-3">long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to.</p>
       </div>
 
-      <div class="content-family mb-3 mt-4"><img src="../Asserts/image/home-page/growing-stronger/check.png"
-          class="me-4">Divide
-        the group into smaller teams.</div>
-      <div class="content-family my-3"><img src="../Asserts/image/home-page/growing-stronger/check.png"
-          class="me-4">Give each
-        team a Bible verse or story.</div>
-
-      <button class="all-buttons mt-5 "><a class="text-white text-decoration-none" href="./Faq.html">LEARN MORE</a></button>
-
+    <div class="position-relative ">
+        <div class="carousel-container p-3">
+        </div>
+        <div
+          class="carousal-btn d-flex flex-md-column flex-row justify-content-center align-items-center gap-1 mx-auto my-3 ">
+          <button class="prev-btn all-buttons px-1 py-3 rounded-0 prev-btn "><img
+              src="../Asserts/image/pages/faq/left-arrow.svg"></button>
+          <button class="prev-btn all-buttons px-1 py-3 rounded-0 next-btn"><img
+              src="../Asserts/image/pages/faq/right-arrow.svg"></button>
+        </div>
     </div>
 
-    <div class="stats-church row mt-5 rounded-2 align-items-center justify-content-center p-3">
-      <div class="col-6 col-md-3 text-center"><h2 class="fw-bold fs-1 heading-family stats" data-stats-type="volunters" ></h2><P class="content-family">New volunteer</P></div>
-      <div class="col-md-3 col-6  text-center"><h2 class="fw-bold fs-1 heading-family stats" data-stats-type="locations" ></h2><P class="content-family">Church locations</P></div>
-      <div class="col-md-3 col-6 text-center"><h2 class="fw-bold fs-1 heading-family stats" data-stats-type="donations" ></h2><P class="content-family">Managed donations</P></div>
-      <div class="col-md-3 col-6 text-center"><h2 class="fw-bold fs-1 heading-family stats" data-stats-type="members" ></h2><P class="content-family">New member</P></div>
-    </div>
-
+    <div class="content-family p-4 my-4">long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, contentlong established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal.</div>
   </section>
-  
-  <!-- walking -->
-  <section class="mx-auto padding-section container " style="margin-top: 100px;">
-    <div class="row  justify-content-around align-items-center">
-      <h2 class="col-lg-4 col-12 w-50  heading-text satisfaction-text  ">walking together,growing in faith</h2>
-      <p class="col-lg-5 col-12 content-family my-3">A long established fact that a reader will be distracted by the
-        readable content of a page when looking.A long established fact that.A long.</p>
-    </div>
+
+
+  <section class="padding-section container mx-auto  ">
     
-    <div class="row row-cols-1  row-cols-md-3   mt-2 m-0">
-      <div class="col ">
-        <div class="card m-4 border-0 walking-cards">
-          <img src="../Asserts/image/pages/about-us/book-opened.png" class="card-img-center mx-auto w-25 mt-3" alt="cross">
-          <div class="card-body text-center ">
-            <h5 class="card-title heading-family fs-5 mt-2 fw-semibold">Our Churches</h5>
-            <p class="card-text d-none d-md-block content-family">A long established fact that a reader will be A long.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col ">
-        <div class="card mt-4 border-0 walking-cards">
-          <img src="../Asserts/image/pages/about-us/eye-opened.png" class="card-img-center mx-auto w-25 mt-3"
-            alt="cross">
-          <div class="card-body text-center ">
-            <h5 class="card-title heading-family fs-5 mt-2 fw-semibold">Our Churches</h5>
-            <p class="card-text d-none d-md-block content-family">A long established fact that a reader will be A long.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col ">
-        <div class="card mt-4 border-0 walking-cards">
-          <img src="../Asserts/image/pages/about-us/rocket.png" class="card-img-center mx-auto w-25 mt-3"
-            alt="cross">
-          <div class="card-body text-center ">
-            <h5 class="card-title heading-family fs-5 mt-2 fw-semibold">Our Churches</h5>
-            <p class="card-text d-none d-md-block content-family">A long established fact that a reader will be A long.</p>
-          </div>
-        </div>
-      </div>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3  g-4 members-section my-2">
     </div>
-
-
 
   </section>
 
-  <!-- community -->
-  <section class="padding-section container row mx-auto justify-content-around my-5">
 
-    <div class="position-relative col-lg-5 col-12 mt-3 ">
-      <img src="../Asserts/image/pages/about-us/girl-book.png" alt="girl" class=" w-100 h-100 p-5 p-lg-0">
-      <div class="prayer-stats position-absolute heading-family fs-1 d-flex flex-column 
-      justify-content-center align-items-center text-white stats" data-stats-type="happyPrayers" ><p class="content-family text-white">Happy Prayers</p></div>  
-    </div>
 
-    <div class="col-lg-5 col-12  d-flex flex-column justify-content-around align-items-start about-church mt-5">
-        <div class="px-5 py-3"><h2 class="fw-medium heading-family">Who Are we</h2><P class="content-family">A long established fact that a reader will be A long established fact that a reader.</P></div>
-        <div class="px-5 py-3"><h2 class="fw-medium heading-family">What we believe</h2><P class="content-family">A long established fact that a reader will be A long established fact that a reader.</P></div>
-        <div class="px-5 py-3"><h2 class="fw-medium heading-family">our community</h2><P class="content-family">A long established fact that a reader will be A long established fact that a reader.</P></div>
-       
-    </div>
 
-  
-  </section>
+
 
   <!-- footer -->
   <section class="container-fluid padding-section footer-sec bg-black mt-5">
@@ -247,8 +186,10 @@
     </div>
   </section>
 
-  <script type="module" src="../Javascript/Pages/AboutUs.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="../Javascript/Pages/GalleryCarousal.js" type="module"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
