--- a/frontend/PagesHtml/Blog.html
+++ b/frontend/PagesHtml/Blog.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shrine home</title>
+  <title>Blogs</title>
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 <link href="../Style/home.css" rel="stylesheet">
 
 <body>
@@ -30,7 +31,7 @@
             <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="../index.html">HOME</a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center">
-            <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="./PagesHtml/AboutUs.html">PAGE</a>
+            <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="#">PAGE</a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center">
             <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="#">BLOG</a>
@@ -39,7 +40,7 @@
             <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="#">DONATION</a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center d-none d-xl-block">
-            <a class="navbar-brand" href="#"><img src="../Asserts/image/home-page/footer/nav-logo.png"></a>
+            <a href="#"><img src="../Asserts/image/home-page/footer/nav-logo.png"></a>
           </li>
 
           <li class="nav-item d-flex justify-content-center align-items-center">
@@ -63,60 +64,28 @@
 
   </nav>
 
-  <!-- intro -->
-  <section class="container  padding-section mx-auto row m-0 mt-5 justify-content-around ">
-    <img src="../Asserts/image/pages/gallery/fort-image.png" class="col-6">
-    <img src="../Asserts/image/pages/gallery/castle-img.png" class="col-6">
-  </section>
+  <div class="padding-section container row mx-auto my-5">
+    <img src="../Asserts/image/pages/blogs/house.png" class="col-md-8 col-12 d-md-block d-none pe-3 ps-0">
+    <img src="../Asserts/image/pages/blogs/fort.png" class="col-md-4 col-12 p-0">
+  </div>
+ 
+  <div class="row m-0 justify-content-start  align-items-center p-3 padding-section container mx-auto my-5">
+    <h2 class="col-12  heading-text  ">A Collection of Our Church`s Blog Posts"</h2>
+    <p class=" col-12 content-family my-3  my-4">long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to.long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+  </div>
 
-  <!-- saviour-jesus -->
-  <section class="container padding-section mx-auto">
-    <div class="row m-0 justify-content-start  align-items-center p-3">
-      <h2 class="col-12  heading-text satisfaction-text  mt-5">Our Saviour Jesus Christ Waits Your Gallery</h2>
-      <p class=" col-12 content-family my-3 w-75 mt-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal</p>
-    </div> 
+  <!-- <img src="../Asserts/image/pages/blogs/snow.png"> -->
+  <section class="padding-section container row mx-auto ">
+    <div class="col-xl-8 col-12 blog-section row">
 
-    <ul class="nav nav-pills gap-lg-5 gap-0 justify-content-center" id="pills-tab" role="tablist">
-      <li class="nav-item" role="presentation">
-        <button class="nav-link active bg-transparent  border-0 text-secondary  " id="pills-all-tab" data-bs-toggle="pill" data-bs-target="#pills-all" type="button" role="tab" aria-controls="pills-all" aria-selected="true">All</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link bg-transparent  border-0 text-secondary" id="pills-church-tab" data-bs-toggle="pill" data-bs-target="#pills-church" type="button" role="tab" aria-controls="pills-church" aria-selected="false">Church</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link bg-transparent  border-0 text-secondary" id="pills-donation-tab" data-bs-toggle="pill" data-bs-target="#pills-donation" type="button" role="tab" aria-controls="pills-donation" aria-selected="false">Donation</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link bg-transparent  border-0 text-secondary" id="pills-charity-tab" data-bs-toggle="pill" data-bs-target="#pills-charity" type="button" role="tab" aria-controls="pills-charity" aria-selected="false">Charity</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link bg-transparent  border-0 text-secondary" id="pills-education-tab" data-bs-toggle="pill" data-bs-target="#pills-education" type="button" role="tab" aria-controls="pills-education" aria-selected="false">Education</button>
-      </li>
-    </ul>
-    <hr class="m-0">
 
-    <div class="tab-content p-5" id="pills-tabContent">
-      <div class="tab-pane fade show active" id="pills-all" role="tabpanel" aria-labelledby="pills-all-tab">
-        <div class=" row justify-content-start" id="all-tab">
+        <div class="mx-auto my-5 d-flex justify-content-center gap-2 ">
+            <buttons class="all-buttons bg-transparent text-black border border-secondary px-3 tags-color button-pagination">1</buttons>
+            <buttons class="all-buttons bg-transparent text-black border border-secondary px-3 tags-color button-pagination">2</buttons>
+            <buttons class="all-buttons bg-transparent text-black border border-secondary px-3 tags-color button-pagination">></buttons>
         </div>
-      </div>
-      <div class="tab-pane fade" id="pills-church" role="tabpanel" aria-labelledby="pills-church-tab">
-        <div class="church-tab row justify-content-start">
-        </div>
-      </div>
-      <div class="tab-pane fade" id="pills-donation" role="tabpanel" aria-labelledby="pills-donation-tab">
-        <div class="donation-tab row justify-content-start">
-        </div>
-      </div>
-      <div class="tab-pane fade" id="pills-charity" role="tabpanel" aria-labelledby="pills-charity-tab">
-        <div class="charity-tab row justify-content-start">
-        </div>
-      </div>
-      <div class="tab-pane fade" id="pills-education" role="tabpanel" aria-labelledby="pills-education-tab">
-        <div class="education-tab row justify-content-start">
-        </div>
-      </div>
     </div>
+    
   </section>
 
   <!-- footer -->
@@ -125,7 +94,8 @@
     <div class="padding-section container mx-auto">
       <div class="row p-3 justify-content-between align-items-center">
         <div class="col-lg-2"><img src="../Asserts/image/home-page/footer/footer-logo.png"></div>
-        <p class="col-lg-5 col-12 content-family my-3">A long established fact that a reader will be distracted by the
+        <p class="col-lg-5 col-12 content-family my-3">A long established fact
+          that a reader will be distracted by the
           readable content of a page when looking.</p>
       </div>
     </div>
@@ -176,18 +146,18 @@
         </table>
       </div>
 
-
       <div
         class="col-md-5 mt-4 col-12 d-flex flex-column justify-content-center  text-start  px-lg-5 px-3 py-3 align-items-start ">
-        <h2 class="heading-family text-white fs-4">Subscribe to our newsletter</h2>
-        <p class="content-family my-2">A long established fact that a reader will be distracted by the readable.A long.
+        <h2 class="heading-family text-white fs-4">Subscribe to our
+          newsletter</h2>
+        <p class="content-family my-2">A long established fact that a reader
+          will be distracted by the readable.A long.
         </p>
         <input type="email" placeholder="Enter your email here" class="p-2 w-75  border-0 rounded-1 my-2"
           style="background-color: #323233;">
         <button class="all-buttons border-0 bg-danger text-light px-3 py- my-2">SUBSCRIBE</button>
 
       </div>
-
 
     </div>
     <hr class="footer-hr">
@@ -205,12 +175,8 @@
     </div>
   </section>
 
-
-  
-  <script src="../Javascript/Pages/Gallery.js" type="module"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+  <script type="module" src="../Javascript/Pages/Blog.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
